--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <title>{% block title %}Django LAB{% endblock %}</title>
-    <style>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <!--<style>
       body {
         margin: 0;
         padding: 0;
@@ -39,18 +43,57 @@
         margin-top: 10vh; /* Ensure content starts below the fixed navbar */
         padding: 20px;
       }
-    </style>
+    </style>-->
   </head>
   <body>
-    <div class="navbar">
-      <a href="/taskmanager/">Home</a>
-      <a href="/taskmanager/add">Add Tasks</a>
-      {% if user.is_authenticated %}
-      <a href="/logout/">Logout</a>
-      {% endif %} {% if not user.is_authenticated %}
-      <a href="/login/">Login</a>
-      {% endif %}
-    </div>
+    <!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Task manager</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <a href="/taskmanager/">Home</a>
+        <a href="/taskmanager/add">Add Tasks</a>
+        {% if user.is_authenticated %}
+        <a href="/logout/">Logout</a>
+        {% endif %} {% if not user.is_authenticated %}
+        <a href="/login/">Login</a>
+        {% endif %}
+      </div>
+    </nav>-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Task Manager</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="/taskmanager/">Home</a>
+          <a class="nav-item nav-link" href="/taskmanager/add">Add Tasks</a>
+          {% if user.is_authenticated %}
+          <a class="nav-item nav-link" href="/logout/">Logout</a>
+          {% endif %} {% if not user.is_authenticated %}
+          <a class="nav-item nav-link" href="/login/">Login</a>
+          {% endif %}
+        </div>
+      </div>
+    </nav>
 
     <div class="content-wrapper">{% block content %}{% endblock %}</div>
   </body>
