--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
       </div>
     </nav>-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Task Manager</a>
+      <a class="navbar-brand" href="/">Task Manager</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -84,7 +84,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="/taskmanager/">Home</a>
+          <a class="nav-item nav-link active" href="/">Home</a>
           <a class="nav-item nav-link" href="/taskmanager/add">Add Tasks</a>
           {% if user.is_authenticated %}
           <a class="nav-item nav-link" href="/logout/">Logout</a>
