--- a/templates/taskmanager/display_items.html
+++ b/templates/taskmanager/display_items.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <title>Display Tasks</title>
+    <style>
+      .expired-task {
+        background-color: red;
+      }
+    </style>
   </head>
   <body>
     {% extends "base.html" %} {% block content %}
@@ -33,7 +38,17 @@
           </thead>
           <tbody>
             {% for item in items %}
-            <tr>
+            <tr
+              {%
+              if
+              item.due_date
+              <
+              today_date
+              %}class="expired-task"
+              {%
+              endif
+              %}
+            >
               <td>{{ item.title }}</td>
               <td>{{ item.description }}</td>
               <td>{{ item.due_date }}</td>
@@ -61,17 +76,37 @@
       <!-- Pagination -->
       <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
-          <li class="page-item disabled">
-            <a class="page-link" href="#" tabindex="-1" aria-disabled="true"
+          {% if items.has_previous %}
+          <li class="page-item">
+            <a
+              class="page-link"
+              href="?page=1"
+              tabindex="-1"
+              aria-disabled="true"
+              >First</a
+            >
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="?page={{ items.previous_page_number }}"
               >Previous</a
             >
           </li>
-          <li class="page-item"><a class="page-link" href="#1">1</a></li>
-          <li class="page-item"><a class="page-link" href="#2">2</a></li>
-          <li class="page-item"><a class="page-link" href="#3">3</a></li>
-          <li class="page-item">
-            <a class="page-link" href="#">Next</a>
+          {% endif %} {% for num in items.paginator.page_range %}
+          <li class="page-item{% if num == items.number %} active{% endif %}">
+            <a class="page-link" href="?page={{ num }}">{{ num }}</a>
           </li>
+          {% endfor %} {% if items.has_next %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ items.next_page_number }}"
+              >Next</a
+            >
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="?page={{ items.paginator.num_pages }}"
+              >Last</a
+            >
+          </li>
+          {% endif %}
         </ul>
       </nav>
     </div>
