--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>{% block title %}Django LAB{% endblock %}</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+<head>
+  <title>{% block title %}Django LAB{% endblock %}</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+</head>
+
+<body>
+  <!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="#">Task manager</a>
       <button
         class="navbar-toggler"
@@ -31,32 +30,27 @@
         {% endif %}
       </div>
     </nav>-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="/">Task Manager</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="/">Home</a>
-          <a class="nav-item nav-link" href="/taskmanager/add">Add Tasks</a>
-          {% if user.is_authenticated %}
-          <a class="nav-item nav-link" href="/logout/">Logout</a>
-          {% endif %} {% if not user.is_authenticated %}
-          <a class="nav-item nav-link" href="/login/">Login</a>
-          {% endif %}
-        </div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">Task Manager</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="/">Home</a>
+        <a class="nav-item nav-link" href="/taskmanager/add">Add Tasks</a>
+        {% if user.is_authenticated %}
+        <a class="nav-item nav-link" href="/logout/">Logout</a>
+        {% endif %} {% if not user.is_authenticated %}
+        <a class="nav-item nav-link" href="{% url 'signup' %}">Sign Up</a>
+        <a class="nav-item nav-link" href="/login/">Login</a>
+        {% endif %}
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    <div class="content-wrapper">{% block content %}{% endblock %}</div>
-  </body>
+  <div class="content-wrapper">{% block content %}{% endblock %}</div>
+</body>
+
 </html>
