--- a/templates/base.html
+++ b/templates/base.html
@@ -42,8 +42,9 @@
         <a class="nav-item nav-link" href="/taskmanager/add">Add Tasks</a>
         {% if user.is_authenticated %}
         <a class="nav-item nav-link" href="/logout/">Logout</a>
+        <a class="nav-item nav-link" href="/userlist/">User List</a>
         {% endif %} {% if not user.is_authenticated %}
-        <a class="nav-item nav-link" href="{% url 'signup' %}">Sign Up</a>
+        <a class="nav-item nav-link" href="/signup/">Sign Up</a>
         <a class="nav-item nav-link" href="/login/">Login</a>
         {% endif %}
       </div>
