--- a/templates/base.html
+++ b/templates/base.html
@@ -7,29 +7,6 @@
 </head>
 
 <body>
-  <!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Task manager</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <a href="/taskmanager/">Home</a>
-        <a href="/taskmanager/add">Add Tasks</a>
-        {% if user.is_authenticated %}
-        <a href="/logout/">Logout</a>
-        {% endif %} {% if not user.is_authenticated %}
-        <a href="/login/">Login</a>
-        {% endif %}
-      </div>
-    </nav>-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/">Task Manager</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -41,9 +18,13 @@
         <a class="nav-item nav-link active" href="/">Home</a>
         <a class="nav-item nav-link" href="/taskmanager/add">Add Tasks</a>
         {% if user.is_authenticated %}
-        <a class="nav-item nav-link" href="/logout/">Logout</a>
+        {% if user.is_admin %}
+
         <a class="nav-item nav-link" href="/userlist/">User List</a>
-        {% endif %} {% if not user.is_authenticated %}
+
+        {% endif %}
+        <a class="nav-item nav-link" href="/logout/">Logout</a>
+        {% else %}
         <a class="nav-item nav-link" href="/signup/">Sign Up</a>
         <a class="nav-item nav-link" href="/login/">Login</a>
         {% endif %}
