--- a/templates/authtaskmanager/userlist.html
+++ b/templates/authtaskmanager/userlist.html
@@ -10,6 +10,8 @@
                 <th scope="col">#</th>
                 <th scope="col">Username</th>
                 <th scope="col">Admin</th>
+                <th scope="col">Actions</th>
+
             </tr>
         </thead>
         <tbody>
@@ -18,6 +20,10 @@
                 <th scope="row">{{ forloop.counter }}</th>
                 <td>{{ user.username }}</td>
                 <td>{{ user.is_admin }}</td>
+
+                <td>
+                    <a href="{% url 'delete_user' user.id %}" class="btn btn-danger btn-sm">Delete</a>
+                </td>
             </tr>
             {% endfor %}
         </tbody>
